@@ -47,6 +47,7 @@ import javax.swing.KeyStroke;
 import javax.swing.text.JTextComponent;
 
 import net.sf.jabref.util.CaseChangeMenu;
+import net.sf.jabref.util.NameListNormalizer;
 
 public class FieldTextMenu implements MouseListener
 {
@@ -204,7 +205,8 @@ public class FieldTextMenu implements MouseListener
 
   class ReplaceAction extends BasicAction{
     public ReplaceAction(){
-        super("Replace comma by and where appropriate");
+        super("Normalize to BibTeX name format");
+        putValue(SHORT_DESCRIPTION, Globals.lang("If possible, normalize this list of names to conform to standard BibTeX name formatting"));
     }
     public void actionPerformed(ActionEvent evt){
         if (myFieldName.getText().equals("")){
@@ -213,59 +215,9 @@ public class FieldTextMenu implements MouseListener
         //myFieldName.selectAll();
         String input = myFieldName.getText();
         //myFieldName.setText(input.replaceAll(","," and"));
-        myFieldName.setText(generalFixAuthor(input));
+        myFieldName.setText(NameListNormalizer.normalizeAuthorList(input));
     }
   }
 
- public static String generalFixAuthor(String in){
-        String author;
-        String[] authors = in.split("( |,)and ",-1);
-        for (int i = 0; i < authors.length; i++){
-            authors[i] = authors[i].trim();
-        }
-        /* determine whether the last author name includes a comma
-         * 0 is intentional (consider -1 as alternative) */
-        author = authors[authors.length-1];
-        boolean lnfn = (author.indexOf(",") > 0);
-        StringBuffer sb = new StringBuffer();
-        /*not tested!*/
-        if(lnfn){
-            String[] parts;
-            for (int i = 0; i < authors.length; i++){
-                parts = authors[i].split(",",-1);
-                if(parts.length == 2){
-                    parts[0] = parts[0].trim().replaceAll(" ","~");
-                    parts[1] = parts[1].trim().replaceAll(" ","~");
-                    sb.append(parts[1]+" "+ parts[0]);
-                } else {
-                    sb.append(authors[i]);
-                }
-                if(i < authors.length -1){
-                    sb.append(" and ");
-                }
-            }
-        } else {
-            for (int i = 0; i < authors.length; i++){
-                String[] iAuthors = authors[i].split(",");
-                String[] ijparts;
-                for (int j=0; j<iAuthors.length; j++){
-                    iAuthors[j] = iAuthors[j].trim();
-                    ijparts = iAuthors[j].split(" ",-1);
-                    for (int k=0; k<ijparts.length; k++){
-                        sb.append(ijparts[k]);
-                        if(k < ijparts.length-2){
-                            sb.append('~');
-                        } else if (k == ijparts.length-2){
-                            sb.append(' ');
-                        }
-                    }
-                    if (j < iAuthors.length -1 || i < authors.length -1){
-                        sb.append(" and ");
-                    }
-                } /* end of j-loop (authors split by ,) */
-            } /* end of i-loop (authors split by and)*/
-        }
-        return sb.toString();
-    }
 
 }
