@@ -2310,6 +2310,9 @@ Directory_or_file=Directory_or_file
 Include_subdirectories=Include_subdirectories
 Edit_Group_Membership=Edit_Group_Membership
 PostgreSQL=PostgreSQL
+
+Normalize_to_BibTeX_name_format=Normalize_to_BibTeX_name_format
+If_possible,_normalize_this_list_of_names_to_conform_to_standard_BibTeX_name_formatting=If_possible,_normalize_this_list_of_names_to_conform_to_standard_BibTeX_name_formatting
 JSTOR_import_cancelled=JSTOR_import_cancelled
 HTML_list=HTML_list
 Click_group_to_toggle_membership_of_selected_entries=Click_group_to_toggle_membership_of_selected_entries
