@@ -1491,7 +1491,6 @@ Include_subdirectories=
 Edit_Group_Membership=
 PostgreSQL=
 Highlight_Words=
-JSTOR_import_cancelled=
-HTML_list=
-Click_group_to_toggle_membership_of_selected_entries=
-Use_EMACS_23_insertion_string=
+
+Normalize_to_BibTeX_name_format=Normaliser_til_BibTeX-navneformat
+If_possible,_normalize_this_list_of_names_to_conform_to_standard_BibTeX_name_formatting=Om_mulig,_normaliser_denne_navnelisten_til_standard_BibTeX-navneformatering
